tests/error/gack_decl.gw
// [contains] cannot use <<< >>> on variable declarations
 <<< int i >>>;
